# charmed-etcd-operator

./: .gitignore  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yaml
config/: etcd.conf.yml
docs/: deploy-etcd.md  manage-passwords.md  manage-persistent-storage.md  scale-horizontally.md  set-up.md
docs/tls/: disable-tls.md  enable-tls.md  managing-private-keys.md
src/: charm.py  literals.py  workload.py
src/common/: client.py  exceptions.py  secrets.py
src/core/: __init__.py  cluster.py  models.py  workload.py
src/events/: actions.py  etcd.py  external_clients.py  tls.py
src/managers/: __init__.py  cluster.py  config.py  external_clients.py  tls.py
src/managers/config/: etcd.conf.yml
tests/integration/: helpers.py  helpers_deployment.py  test_charm.py  test_tls.py
tests/integration/client_relations/: test_client_relations.py
tests/integration/client_relations/requirer-charm/: charmcraft.yaml  metadata.yaml
tests/integration/client_relations/requirer-charm/src/: charm.py
tests/integration/ha/: continuous_writes.py  helpers.py  helpers_network.py  test_failover.py  test_ha_on_rolling_restart.py  test_network_cut.py  test_scaling.py  test_storage_reuse.py
tests/integration/tls/: test_ca_rotation.py  test_private_key_rotation.py  test_tls.py
tests/unit/: conftest.py  test_actions.py  test_charm.py  test_ecr.py  test_tls.py
